fix(TDP-11718): [On-prem 8] Fix tcomp service when using java 17 at runtime